--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ psycopg2-binary = "^2.9.9"
 httpx = "^0.26.0"
 pyjwt = {extras = ["crypto"], version = "^2.10.1"}
 alembic = "^1.16.1"
+pydantic = {extras = ["email"], version = "^2.11.5"}
 
 
 [build-system]
