--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ httpx = "^0.26.0"
 pyjwt = {extras = ["crypto"], version = "^2.10.1"}
 alembic = "^1.16.1"
 pydantic = {extras = ["email"], version = "^2.11.5"}
+bcrypt = "^4.3.0"
 
 
 [build-system]
